--- a/ganhos2.html
+++ b/ganhos2.html
@@ -161,7 +161,7 @@
 
     // CÓDIGO DE CONVITE FIXO DO USUÁRIO PRINCIPAL
     const meuCodigo = "1";
-    const meuLink = `https://hivest/?codigo=${meuCodigo}`;
+    const meuLink = `https://inves13.github.io/hivest-codigo-1/?codigo=${meuCodigo}`;
 
     // Exibir código e link
     document.getElementById("invite-code").textContent = meuCodigo;
