--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       const senha = document.getElementById("cadastro-senha").value;
       const codigoIndicacao = document.getElementById("cadastro-codigo").value || null;
 
-      // Gerar código de indicação único para o novo usuário
-      const codigoGerado = Math.floor(Math.random() * 10000); // Código único
+      // Gerar código único de indicação (5 dígitos aleatórios)
+      const codigoGerado = Math.floor(10000 + Math.random() * 90000);
 
       db.ref("usuarios/" + telefone).once("value").then(snapshot => {
         const data = snapshot.val();
@@ -104,11 +104,12 @@
             renda: 0,
             recebimento: 0,
             ultimoCheckin: "",
-            codigoIndicacao: codigoIndicacao,  // Código de indicação do usuário anterior
-            codigoGerado: codigoGerado,        // Código gerado para o novo usuário
+            codigoIndicacao: codigoIndicacao,
+            codigoGerado: codigoGerado,
             timestamp: Date.now()
           }).then(() => {
             localStorage.setItem("telefoneLogado", telefone);
+            localStorage.setItem("meuCodigo", codigoGerado);
             window.location.href = "H.html";
           }).catch((error) => {
             alert("Erro ao cadastrar: " + error.message);
@@ -127,6 +128,7 @@
         const data = snapshot.val();
         if (data && data.senha === senha) {
           localStorage.setItem("telefoneLogado", telefone);
+          localStorage.setItem("meuCodigo", data.codigoGerado || "N/A");
           window.location.href = "H.html";
         } else {
           alert("Telefone ou senha incorretos!");
@@ -134,7 +136,7 @@
       });
     });
 
-    // Preencher o código de indicação automaticamente pela URL
+    // Preencher automaticamente o código de indicação pela URL
     window.addEventListener("DOMContentLoaded", () => {
       const urlParams = new URLSearchParams(window.location.search);
       const codigo = urlParams.get("codigo");
